project/stage/tests/reject/corless_reject_tests/a2/3.3.b_invalid.ul
void main() {
    float a;
    a = 3;
    foo(a);
}

void foo(int b) {

}